# PySkyWiFi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: chat.py  local_http_proxy.py  remote_http_daemon.py  remote_http_proxy.py  stock_tickers.py
src/PySkyWiFi/: __init__.py  base26.py  local_http_proxy.py  remote_http_proxy.py
src/PySkyWiFi/http/: local_proxy.py  remote_daemon.py
src/PySkyWiFi/transports/: __init__.py  discord.py  file.py  github.py
